<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/sync" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connect" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_connect"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_connect"
            android:title="@string/help" />
    </group>

</menu>
